--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ div i {
 }
 
 .invoice {
-    background-image: url("/images/invoice.jpg");
+    background-image: url("images/invoice.jpg");
 }
 
 .hairdresser:hover div {
@@ -258,7 +258,7 @@ div i {
 }
 
 .hairdresser {
-    background-image: url("/images/mobile_app.jpg");
+    background-image: url("images/mobile_app.jpg");
 }
 
 .interior:hover div {
@@ -273,7 +273,7 @@ div i {
 }
 
 .interior {
-    background-image: url("/images/interior.png");
+    background-image: url("images/interior.png");
 }
 
 .crm:hover div {
@@ -287,7 +287,7 @@ div i {
 }
 
 .crm {
-    background-image: url("/images/crm.jpg");
+    background-image: url("images/crm.jpg");
 }
 
 .competency p {
@@ -556,7 +556,7 @@ ul div {
     }
 
     .invoice {
-        background-image: url("/images/invoice.jpg");
+        background-image: url("images/invoice.jpg");
     }
 
 
@@ -572,7 +572,7 @@ ul div {
     }
 
     .hairdresser {
-        background-image: url("/images/mobile_app.jpg");
+        background-image: url("images/mobile_app.jpg");
     }
 
     .interior:hover div span{
@@ -587,7 +587,7 @@ ul div {
     }
 
     .interior {
-        background-image: url("/images/interior.png");
+        background-image: url("images/interior.png");
     }
 
     .crm:hover div span {
@@ -602,7 +602,7 @@ ul div {
     }
 
     .crm {
-        background-image: url("/images/crm.jpg");
+        background-image: url("images/crm.jpg");
     }
 
     /*.intro_p_dt {*/
