--- a/style.css
+++ b/style.css
@@ -1,789 +1,104 @@
-/* Consistent styling across all pages*/
+/*includes padding/border in element's width/height*/
 * {
     box-sizing: border-box;
 }
 
+/*removes default margin*/
 body {
     margin: 0;
-    font-family: "Source Code Pro", monospace;
-    /*background-color: #e6ecf5;*/
-    background: #141E30;
- /* Chrome 10-25, Safari 5.1-6 */
- background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
- /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- background: linear-gradient(-45deg, #35577D, #141E30);
+    background-color: #009688;
 }
 
-h1 {
-    font-size: 22pt;
-    text-align: center;
+/*removes underlines*/
+a {
+    text-decoration: none;
+}
+
+/*nav bar*/
+.name, .job-title {
+    margin: 0;
+    font-family: 'Source Code Pro', sans-serif;
+}
+
+.home-btn {
+    margin: 2rem;
+}
+
+a:visited {
+    color: #000;
+}
+
+.bx {
+    color: #000;
+    font-size: 2rem;
+    padding-left: 1rem;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    background-color: #ffffff;
+    background-color: #FFEB3B;
 }
 
-footer {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 108px;
-    background-color: #ffffff;
+.nav-icons {
+    margin: 2.8rem 2rem;
 }
 
+@media screen and (max-width: 554px) {
+    nav {
+       height: 20vh;
+    }
 
-/************ Index page ************/
+    .home-btn {
+        width: 9rem;
+        height: 6rem;
+        /*background-color: cyan;*/
+        margin-top: 2rem;
+    }
 
-/* About me */
+    .nav-icons {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 1rem;
+        margin-right: 1rem;
+        width: 2rem;
+        height: 8rem;
+        /*background-color: orange;*/
+    }
+
+    .bx {
+        padding: 0 0 0.4rem;
+    }
+}
+
+/*about me*/
 .about-me {
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    height: 540px;
-}
-
-.about-me h1 {
-    color: #fff;
-    padding-bottom: 10px;
-    padding-left: 10px;
-}
-
-.about-me p {
-    background-color: #fff;
-    width: 460px;
-}
-
-.about-me-container {
-    display: flex;
     flex-direction: column;
-    align-items: start;
-}
-
-.intro-p {
-    background-color: #fff;
-    display: flex;
-    padding: 30px;
-    border-radius: 30px;
-    margin-top: 6px;
-}
-
-.intro-p a:visited {
-    color: blue;
-}
-
-/* Projects */
-
-
-
-/* Skills */
-.skills {
-    display: flex;
-    flex-direction: column;
-    height: 500px;
-    justify-content: center;
-    padding: 20px 40px 140px;
     align-items: center;
-    /*background-color: #e6ecf5;*/
-        background: #141E30;
- /* Chrome 10-25, Safari 5.1-6 */
- background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
- /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- background: linear-gradient(-45deg, #35577D, #141E30);
+    /*background-color: green;*/
+    padding-bottom: 4rem;
 }
 
-.skills h1 {
-    color: #fff;
+.about-me p, ul {
+    width: 54vw;
+    /*background-color: orange;*/
+    color: #FFF;
+    font-size: 1rem;
+    margin-top: 1.8rem;
+    margin-bottom: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-/* to sort out */
-
-h3 {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    color: #000000;
+.about-me a {
+    color: #212121;
 }
 
-a {
-    text-decoration: none;
-}
-
-i {
-    font-size: 36pt;
-    color: #000000;
-    margin: 30px;
-    border-radius: 30px;
-    padding: 6px;
-}
-
-small {
-    font-size: 16pt;
-}
-
-p {
-    margin: 0;
-    padding: 0 0 20px;
-}
-
-span {
-    color: #000000;
-    background-color: #ffffff;
-    border-radius: 5px;
-    padding: 20px;
-    font-size: 20pt;
-}
-
-.project_header h1 {
-    margin: 20px 0 0;
-}
-
-
-.home {
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    margin: 20px;
-    padding: 10px;
-}
-
-/*.intro {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*}*/
-
-.projects {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    padding: 10px 40px 10px;
-    background-color: #ffffff;
-
-}
-
-.projects_row1 div, .projects_row2 div, .projects_row3 div{
-    text-align: center;
-    width: 400px;
-    height: 300px;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    margin: 0 0 50px;
-    /*font-size: 10pt;*/
-    border-radius: 5px;
-    font-weight: bold;
-    font-family: "Agdasima", sans-serif;
-    z-index: 1;
-    color: #2A4875;
-
-}
-
-.language {
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.competency {
-        background-color: #FFFFFF;
-        border-radius: 10px;
-        padding: 10px;
-}
-.contact {
-    display: flex;
-    flex-direction: row;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    margin: 20px;
-    padding: 10px;
-}
-
-.skills_comp_sections {
-    display: flex;
-    flex-direction: column;
-}
-
-.skills_comp_sections div {
-    margin: 10px 0;
-}
-
-.list div {
-    margin: 0;
-}
-
-.list ul{
-    padding-left: 30px;
-}
-
-.cv {
-    display: none;
-}
-
-.project_header {
-    padding: 30px;
-    background-color: #ffffff;
-
-}
-
-.language p {
-    text-align: left;
-    padding: 0;
-}
-
-.skills img {
-    height: 100px;
-    width: 200px;
-}
-
-.about_me {
-    padding: 0 0 4px;
-    display: flex;
-}
-
-
-#contact_form {
-    width: 300px;
-}
-
-#cv {
-    display: none;
-}
-
-#github {
-    display: none;
-}
-
-#linkedin {
-    font-size: 30pt;
-}
-
-
-div i {
-    color: #000000;
-    font-size: 20pt;
-    margin: 0;
-    text-align: center;
-    padding: 0 10px;
-    border-radius: 0;
-    background-color: #FFFFFF;
-}
-
-
-.collector-app-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    /*font-size: 38pt;*/
-    /*color: #2A4875;*/
-}
-
-.collector-app-project div {
-    margin: 0;
-    font-size: 20pt;
-
-}
-
-.collector-app-project {
-    background-image: url('images/collector_app.png');
-}
-
-.film-quote-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: 38pt;
-    /*color: #2A4875;*/
-}
-
-.film-quote-project div {
-    margin: 0;
-    font-size: 38pt;
-
-}
-
-.film-quote-project {
-    background-image: url("images/film_quote_game.png");
-    background-size: contain;
-}
-
-.job-listings-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: 38pt;
-    /*color: #2A4875;*/
-}
-
-.job-listings-project div {
-    margin: 0;
-    font-size: 38pt;
-}
-
-.job-listings-project {
-    background-image: url("images/job_listing.png");
-}
-
-.furniture-store-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: 38pt;
-    /*color: #2A4875;*/
-}
-
-.furniture-store-project div {
-    margin: 0;
-}
-
-.furniture-store-project {
-    background-image: url("images/furniture_store.png");
-}
-
-/*Academy Portal */
-.academy-portal-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: 38pt;
-    /*color: #2A4875;*/
-}
-
-.academy-portal-project div {
-    margin: 0;
-}
-
-.academy-portal-project {
-    background-image: url("images/academy_portal.png");
-}
-
-/*Journey Planner*/
-.journey-planner-project:hover div {
-    background-color: rgba(255, 255, 255, 0.5);
-    font-size: 38pt;
-    /*color: #2A4875;*/
-}
-
-.journey-planner-project div {
-    margin: 0;
-}
-
-.journey-planner-project {
-    background-image: url("images/journey_planner.png");
-}
-
-
-
-.competency p {
-    padding: 0;
-}
-
-ul{
-    margin: 0;
-}
-
-ul div {
-    margin: 0;
-}
-
-/*exclusive styling to project pages*/
-
-.project_head {
-    padding: 30px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.project_head p {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 30px;
-}
-
-.project_info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-}
-
-.project_head img {
-    border-radius: 5px;
-    height: 420px;
-    width: 600px;
-    margin: 0 40px;
-}
-
-.project_p {
-    margin: 30px 40px 0 40px;
-}
-
-.external-links {
-    color: #fff;
-    font-size: 20px;
-    font-weight: 700;
-    display: flex;
-    flex-direction: column;
-    padding-left: 40px;
-    justify-content: space-evenly;
-}
-
-a:visited {
-    color: #fff;
-}
-#link {
-    padding-bottom: 30px;
-}
-
-@media screen and (min-width: 600px) {
-
-    .intro_container {
-        width: 55%;
-        height: 450px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: start;
-        /*margin: auto;*/
+@media screen and (max-width: 554px) {
+    .about-me p, ul {
+        width: 80vw;
+        /*text-align: center;*/
+        font-size: 0.9rem;
     }
-
-    .intro_header {
-        height: 15%;
-        /*width: 50%;*/
-        display: flex;
-        justify-content: start;
-        align-items: start;
-
-    }
-
-    .intro_p {
-        width: 80%;
-        height: 80%;
-        display: flex;
-        justify-content: center;
-        padding-top: 10px;
-    }
-
-    .intro_p1 {
-        width: 50%;
-        display: flex;
-
-    }
-
-    .intro_p2 {
-        width: 50%;
-        padding-left: 30px;
-        display: flex;
-
-    }
-
-    .intro_p_mob {
-        display: none;
-    }
-
-    /*.p {*/
-    /*    width: 100px;*/
-    /*}*/
-
-
-    .page_container {
-        position: relative;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    span {
-        color: transparent;
-        background-color: transparent;
-    }
-
-    /*.contain1 {*/
-    /*    !*display: flex;*!*/
-    /*    justify-content: center;*/
-    /*    display: none;*/
-    /*}*/
-
-
-    .intro {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0 0;
-        margin: 0 auto;
-    }
-
-    /*.about_me {*/
-    /*    !*display: flex;*!*/
-    /*    !*justify-content: start;*!*/
-    /*    !*!*display: block;*!*!*/
-    /*}*/
-
-    /*.about_me_para {*/
-    /*    !*display: flex;*!*/
-    /*    display: none;*/
-    /*    flex-direction: row;*/
-    /*    justify-content: start;*/
-    /*    text-align: left;*/
-    /*}*/
-
-    .nav_icons {
-        display: flex;
-        flex-direction: row;
-        margin: 0 20px;
-
-    }
-
-
-
-    .list {
-        display: flex;
-        padding: 0;
-        margin: 0;
-    }
-
-    ul {
-        padding: 0 20px;
-    }
-
-    .language {
-        padding: 15px 0 0 15px;
-        margin: 0;
-    }
-
-   .language p {
-       padding: 0;
-   }
-
-   .competency p {
-       padding: 5px 0 0 15px;
-   }
-
-    .skills_comp_sections {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .skills_comp_sections div {
-        margin: 10px 10px;
-    }
-
-    /*.about_me_para div {*/
-    /*    width: 30rem;*/
-    /*    padding: 0 20px;*/
-    /*    !*color: white;*!*/
-    /*}*/
-
-    .projects {
-        display: flex;
-        flex-flow: row wrap;
-        padding: 80px 0 40px;
-    }
-
-    .project_header {
-        /*display: flex;*/
-        /*flex-direction: row;*/
-        /*justify-content: center;*/
-        /*margin: 30px 0 30px;*/
-        /*writing-mode: vertical-rl;*/
-        /*text-orientation: upright;*/
-        transform: rotate(90deg);
-        position: absolute;
-        top: 1200px;
-        left: 1150px;
-        /*transform-origin: center;*/
-        /*display: flex;*/
-        /*justify-content: end;*/
-        /*align-items: start;*/
-        /*unicode-bidi: isolate;*/
-        background-color: #ffffff;
-
-    }
-
-    .project_header h1 {
-        font-size: 26pt;
-        /*font-family: "Anton", sans-serif;*/
-        /*font-weight: 800;*/
-        /*font-style: normal;*/
-
-    }
-
-    .projects_row1 {
-        display: flex;
-        flex-flow: row wrap;
-        margin: 0 0 28px;
-    }
-
-    .projects_row2 {
-        display: flex;
-        flex-flow: row wrap;
-        margin: 0 0 28px;
-    }
-
-    .projects_row3 {
-        display: flex;
-        flex-flow: row wrap;
-        margin: 0 0 28px;
-    }
-
-    .projects_row1 div, .projects_row2 div, .projects_row3 div {
-        margin: 0 30px 10px;
-        width: 400px;
-        height: 300px;
-    }
-
-    #cv {
-        display: block;
-        color: #000000;
-        font-size: 30pt;
-    }
-
-    #github {
-        display: block;
-        color: #000000;
-        font-size: 30pt;
-    }
-
-    .collector-app-project:hover div span{
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .collector-app-project div{
-        margin: 0;
-    }
-
-    .collector-app-project {
-        background-image: url("images/collector_app.png");
-        background-size: contain;
-    }
-
-
-    .film-quote-project:hover div span {
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .film-quote-project div {
-        margin: 0;
-    }
-
-    .film-quote-project {
-        background-image: url("images/film_quote_game.png");
-        background-position: center;
-    }
-
-    .job-listings-project:hover div span{
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .job-listings-project div {
-        margin: 0;
-    }
-
-    .job-listings-project {
-        background-image: url("images/job_listing.png");
-    }
-
-    .furniture-store-project:hover div span {
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .furniture-store-project div {
-        margin: 0;
-    }
-
-    .furniture-store-project {
-        background-image: url("images/furniture_store.png");
-    }
-
-    /*Academy Portal*/
-    .academy-portal-project:hover div span {
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .academy-portal-project div {
-        margin: 0;
-    }
-
-    .academy-portal-project {
-        background-image: url("images/academy_portal.png");
-    }
-
-    /*Journey Planner*/
-    .journey-planner-project:hover div span {
-        background-color: rgba(255, 255, 255, 0.5);
-        font-size: 28pt;
-        color: #000000;
-        background-color: #ffffff;
-    }
-
-    .journey-planner-project div {
-        margin: 0;
-    }
-
-    .journey-planner-project {
-        background-image: url("images/journey_planner.png");
-    }
-
-    /*.intro_p_dt {*/
-    /*    display: block;*/
-    /*}*/
-
-
-
-
-
-
-
-/*exclusive styling to project pages*/
-
-    .project_head {
-        padding: 30px 0 130px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .project_head h1 {
-        color: #fff;
-    }
-
-    .project_info {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-align: left;
-        padding: 10px;
-    }
-
-    p {
-        width: 460px;
-    }
-
-    .project_p {
-        margin: 0;
-    }
-
 }
-
-/*@media screen and (min-width: 1000px) {*/
-
-/*    .project_head {*/
-/*        padding: 0 0 442px;*/
-/*    }*/
-
-/*}*/
