test adding background image to body

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 /*removes default margin*/
 body {
     margin: 0;
-    background-color: #009688;
+    /*background-color: #009688;*/
+    background-image: url('images/0.2opacity_bg.png');
 }
 
 /*removes underlines*/
