--- a/style.css
+++ b/style.css
@@ -12,15 +12,17 @@ body {
 /*removes underlines*/
 a {
     text-decoration: none;
+    color: #212121;
 }
 
 /*nav bar*/
 .name, .job-title {
     margin: 0;
     font-family: 'Source Code Pro', sans-serif;
+    font-weight: 400;
 }
 
-.home-btn {
+.name-title {
     margin: 2rem;
 }
 
@@ -28,7 +30,7 @@ a:visited {
     color: #000;
 }
 
-.bx {
+.bx-download, .bxl-github, .bxl-linkedin {
     color: #000;
     font-size: 2rem;
     padding-left: 1rem;
@@ -37,7 +39,7 @@ a:visited {
 nav {
     display: flex;
     justify-content: space-between;
-    background-color: #FFEB3B;
+    background-color: #B2DFDB;
 }
 
 .nav-icons {
@@ -78,6 +80,7 @@ nav {
     flex-direction: column;
     align-items: center;
     padding-bottom: 4rem;
+    margin-top: 1rem;
     /*background-color: green;*/
 }
 
@@ -88,6 +91,7 @@ nav {
     margin-top: 1.8rem;
     margin-bottom: 0;
     font-family: 'Poppins', sans-serif;
+    font-weight: 300;
     /*background-color: blue;*/
 }
 
@@ -124,5 +128,55 @@ nav {
 @media screen and (min-width: 1069px) and (max-width: 1250px) {
     .about-me p, ul {
         width: 60vw;
+    }
+}
+
+/*footer*/
+footer {
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    background-color: #B2DFDB;
+}
+
+footer h3, footer i {
+    margin-top: 3.4rem;
+    font-family: 'Source Code Pro', sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.bxs-envelope, .bxs-phone {
+    font-size: 1.2rem;
+    margin-left: 1.4rem;
+    margin-right: 0.3rem;
+}
+
+.email {
+    /*background-color: orange;*/
+    display: flex;
+}
+
+.phone-no {
+    /*background-color: yellow;*/
+    display: flex;
+}
+
+@media screen and (max-width: 554px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer h3, footer i {
+        margin: 0;
+    }
+
+    .email {
+        margin-top: 1rem;
+    }
+
+    .phone-no {
+        padding-right: 5.4rem;
     }
 }
