fix header styling

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav {
        height: 24vh;
     }
 
-    .home-btn {
+    .name-title {
         width: 9rem;
         height: 6rem;
         margin-top: 2rem;
