--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav {
     flex-direction: column;
     align-items: center;
     width: 54vw;
-    margin-bottom: 0.4rem;
+    padding-bottom: 0.4rem;
     font-family: 'Poppins', sans-serif;
     color: #FFF;
     /*background-color: #607D8B;*/
@@ -154,6 +154,7 @@ nav {
 .project h2 {
     font-size: 1.6rem;
     font-weight: 300;
+    /*background-color: green;*/
 }
 
 .carousel {
@@ -190,8 +191,35 @@ nav {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     color: #FFF;
+    margin: 0;
+    padding: 1rem 0;
     /*background-color: orange;*/
 }
+
+@media screen and (max-width: 689px) {
+    .project h2 {
+        font-size: 1.2rem;
+        text-align: center;
+        width: 45.6vw;
+    }
+
+    .project-img {
+        width: 80vw;
+    }
+
+  .bx-chevron-left, .bx-chevron-right {
+        font-size: 2rem;
+        cursor: pointer;
+    }
+
+    .project-description {
+        width: 80vw;
+        font-size: 0.9rem;
+    }
+}
+
+
+
 
 
 /*footer*/
