--- a/style.css
+++ b/style.css
@@ -100,13 +100,10 @@ nav {
 }
 
 @media screen and (max-width: 689px) {
-    .about-me p {
-        text-align: center;
-    }
 
     .about-me p, ul {
         width: 80vw;
-        font-size: 0.9rem;
+        /*font-size: 0.9rem;*/
     }
 }
 
@@ -220,14 +217,13 @@ nav {
     }
 
   .bx-link-external, #github-repo {
-    font-size: 1.3rem;
-    /*margin: 0 1rem;*/
-}
+        font-size: 1.3rem;
+        /*margin: 0 1rem;*/
+    }
 
     .project-description {
         width: 80vw;
-        font-size: 0.9rem;
-        text-align: center;
+        /*font-size: 0.9rem;*/
     }
 }
 
